blocks/modal.css
.modal {
	visibility: hidden;
	opacity: 0;
	background-color: #00000080;
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	display: flex;
	justify-content: center;
	align-items: center;
    padding: 10px;
	 transition: opacity .5s ease-in-out, visibility 0s linear .5s;
}

.modal_is-opened {
	opacity: 1;
	visibility: visible;
	transition: opacity .5s ease-in-out, visibility 0s;
}

.modal__container {
	max-width: 730px;
	width: 100%;
	box-sizing: border-box;
	border-radius: 8px;
	background-color: #fff;
	padding: 32px 50px;
	position: relative;
}

.modal__close-btn {
	position: absolute;
	top: 32px;
	right: 50px;
	width: 40px;
	height: 40px;
	background: url("../images/close.svg");
	background-size: cover;
	border: none;
	margin: 0;
	padding: 0;
	align-self: center;
}

.modal__close-btn:hover {
    opacity: 0.8;
	cursor: pointer;
}



.modal__title {
	margin: 0 0 32px;
	font-family: Poppins;
	font-size: 32px;
	line-height: 1;
	font-weight: 500;
}

.modal__form {
	display: flex;
	flex-direction: column;
    max-width: 700px;
}

.modal__label {
	margin: 0 0 32px;
	font-family: Poppins, Arial, Helvetica, sans-serif;
	font-size: 16px;
	line-height: 1.1;
	font-weight: 500;
}

.modal__input {
	display: block;
	margin-top: 8px;
	width: 100%;
	max-width: 600px;
	padding: 16px 12px;
	border-radius: 8px;
	border-color: #21212166;
	font-size: 20px;
	line-height: 1;
	font-weight: 500;
}

.modal__input::placeholder {
	color: #2121214d;
	font-family: Poppins, Arial, Helvetica, sans-serif;
	font-size: 20px;
	line-height: 1;
	font-weight: 500;
}

.modal__submit-btn {
	max-width: 156px;
	width: 100%;
	padding: 18px 32px;
	border-radius: 8px;
	background-color: #212121;
	color: #fcf5e5;
}

.modal__submit-btn:hover {
    background-color: rgba(33, 33, 33, 0.8);
    cursor: pointer;
}

@media screen and (max-width: 627px) {
    .modal__title  {
        font-size: 20px;
        margin: 0 0 34px;
    }

    .modal__input {
        max-width: 475px;
        font-size: 16px;
    }

	.modal__input::placeholder {
		font-size: 16px;
	}

    .modal__submit-btn {
        max-width: none;
    }
}

